# cyntrisec-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mcp  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json  smithery.yaml
.agent/skills/release_testing/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
.well-known/mcp/: server-card.json
docs/: cli-demo.md
examples/: library_usage.py  mcp_config_example.json  scan_demo.ps1  scan_demo.sh  terraform_setup_example.tf
scenarios/demo-snapshots/: sample_report.html
scripts/: build.ps1  build.sh  generate_docs.py  verify_aws.py  verify_issues.py  verify_logic.py  verify_mcp.py  verify_phase1.py  verify_phase2.py
skills/aws-security-analysis/: SKILL.md
src/cyntrisec/: __init__.py  __main__.py
src/cyntrisec/aws/: credentials.py  relationship_builder.py  (+1 more)
tests/: conftest.py
tests/fixtures/: __init__.py  assets.json  relationships.json  vulnerable_aws_scenarios.py
tests/integration/: test_agent_envelope_snapshot.py  test_attack_path_scenarios.py  test_bugfixes_integration.py  test_scan_fixture.py
tests/security/: test_report_and_storage_security.py
tests/unit/: test_action_parser.py  test_action_specific_edges_pbt.py  test_ask_intent.py  test_audit_v014.py  test_cli_analyze.py  test_cli_fixes.py  test_collector_ec2.py  test_collector_iam.py  test_collector_lambda.py  test_collector_network.py  test_collector_rds.py  test_collector_s3.py  test_compliance_explain_fixes.py  test_condition_evaluator.py  test_credentials.py  test_cuts.py  test_edge_kind_schema.py  test_error_handling_and_plan.py  test_error_handling_sso.py  test_evidence_provenance_pbt.py  test_graph.py  test_json_output_cleanliness.py  test_manifest_commands.py  test_mcp_server.py  test_mcp_tools.py  test_offline_simulation_hints.py  test_output_format.py  test_path_finder_properties.py  test_path_traversal.py  test_paths.py  test_reachability_properties.py  test_relationship_builder.py  test_remediate_apply_artifacts.py  test_remediate_plan.py  test_report_setup_fixes.py  test_schema_enforcement_extra.py  test_terraform_fixes.py  test_v014_bugfixes.py
(+64 files in other folders)
