[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyntrisec"
dynamic = ["version"]
description = "AWS capability graph analysis and attack path discovery CLI"
readme = "README.md"
license = { file = "LICENSE" }
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [{ name = "CyntriSec" }]
keywords = ["aws", "security", "attack-path", "cli", "cost-optimization", "mcp", "mcp-server"]

[project.urls]
Homepage = "https://github.com/cyntrisec/cyntrisec-cli"
Repository = "https://github.com/cyntrisec/cyntrisec-cli"
"MCP Registry" = "https://registry.modelcontextprotocol.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "boto3>=1.34",
    "pydantic>=2.4",
    "PyYAML>=6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "moto>=5.0",
    "types-PyYAML",
]

[project.scripts]
cyntrisec = "cyntrisec.cli.main:app"

[tool.hatch.version]
path = "src/cyntrisec/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/cyntrisec",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cyntrisec"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mcp]
# MCP Registry name - must match server.json "name" field
name = "io.github.cyntrisec/cyntrisec"
